--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-titile: Mehrajur Rahman Mirdha
-theme: jekyll-theme-minima # add this line to the plugins list if you already have one
+title: Mehrajur Rahman Mirdha
+theme: minima # add this line to the plugins list if you already have one
